Fix text wrapping

--- a/mental-maths-challenge/style.css
+++ b/mental-maths-challenge/style.css
@@ -7,3 +7,7 @@
     text-align: center;
     font-size: 18px;
 }
+
+p {
+    whitespace: pre-wrap;
+{
